@@ -4,3 +4,4 @@
   * Rename :foreign_key option to :parent_column
   * Update test_helper
   * Add nestable tests
+  * Rename validate_nestable_options to process_options!
